// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Filters /> Default story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:r2:"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary filters-button"
    data-headlessui-state="open"
    id="headlessui-popover-button-:r0:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 18V16H14V18H10ZM3 8V6H21V8H3ZM6 13V11H18V13H6Z"
      />
    </svg>
    Filters
  </button>
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    id="headlessui-popover-panel-:r2:"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container filters-popover"
    >
      <div>
        <fieldset
          class="fieldset filters-fieldset"
        >
          <legend
            class="fieldset-legend filters-fieldset__legend"
          >
            Filters Segment 1
             
          </legend>
          <div
            class="fieldset-items filters-fieldset__checkboxes"
          >
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r5:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r5:"
              >
                Filters label 1
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r6:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r6:"
              >
                Filters label 2
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r7:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r7:"
              >
                Filters label 3
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </article>
</div>
`;

exports[`<Filters /> OverflowInteractive story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:rq:"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary filters-button"
    data-headlessui-state="open"
    id="headlessui-popover-button-:ro:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 18V16H14V18H10ZM3 8V6H21V8H3ZM6 13V11H18V13H6Z"
      />
    </svg>
    Filters
  </button>
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    id="headlessui-popover-panel-:rq:"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container filters-popover"
    >
      <div
        class="filters-popover"
      >
        <fieldset
          class="fieldset filters-fieldset filters-popover__checkbox-field"
        >
          <legend
            class="fieldset-legend filters-fieldset__legend"
          >
            Filters Segment 1
             
          </legend>
          <div
            class="fieldset-items filters-fieldset__checkboxes"
          >
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":rt:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":rt:"
              >
                Filters long label 1 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":ru:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":ru:"
              >
                Filters label 2
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":rv:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":rv:"
              >
                Filters label 3
              </label>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="fieldset filters-fieldset filters-popover__checkbox-field"
        >
          <legend
            class="fieldset-legend filters-fieldset__legend"
          >
            Filters Segment 2
             
          </legend>
          <div
            class="fieldset-items filters-fieldset__checkboxes"
          >
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r10:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r10:"
              >
                Filters label 1
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r11:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r11:"
              >
                Filters long label 2 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r12:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r12:"
              >
                Filters label 3
              </label>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="fieldset filters-fieldset filters-popover__checkbox-field"
        >
          <legend
            class="fieldset-legend filters-fieldset__legend"
          >
            Filters Segment 3
             
          </legend>
          <div
            class="fieldset-items filters-fieldset__checkboxes"
          >
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r13:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r13:"
              >
                Filters label 1
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r14:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r14:"
              >
                Filters label 2
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r15:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r15:"
              >
                Filters long label 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
              </label>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="fieldset filters-fieldset filters-popover__checkbox-field"
        >
          <legend
            class="fieldset-legend filters-fieldset__legend"
          >
            Filters Segment 4
             
          </legend>
          <div
            class="fieldset-items filters-fieldset__checkboxes"
          >
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r16:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r16:"
              >
                Filters label 1
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r17:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r17:"
              >
                Filters label 2
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r18:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r18:"
              >
                Filters label 3
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r19:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r19:"
              >
                Filters label 4
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r1a:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r1a:"
              >
                Filters label 5
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":r1b:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":r1b:"
              >
                Filters label 6
              </label>
            </div>
          </div>
        </fieldset>
      </div>
      <div
        class="button-group button-group--spacing-1x footer__button-group"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
          type="button"
        >
          Clear All
        </button>
        <button
          class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
          type="button"
        >
          Apply
        </button>
      </div>
    </div>
  </article>
</div>
`;

exports[`<Filters /> WithOnApplyAndCustomButtonGroup story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:ri:"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary filters-button"
    data-headlessui-state="open"
    id="headlessui-popover-button-:rg:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 18V16H14V18H10ZM3 8V6H21V8H3ZM6 13V11H18V13H6Z"
      />
    </svg>
    Filters
  </button>
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    id="headlessui-popover-panel-:ri:"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container filters-popover"
    >
      <div>
        <fieldset
          class="fieldset filters-fieldset"
        >
          <legend
            class="fieldset-legend filters-fieldset__legend"
          >
            Filters Segment 1
             
          </legend>
          <div
            class="fieldset-items filters-fieldset__checkboxes"
          >
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":rl:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":rl:"
              >
                Filters label 1
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":rm:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":rm:"
              >
                Filters label 2
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":rn:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":rn:"
              >
                Filters label 3
              </label>
            </div>
          </div>
        </fieldset>
      </div>
      <div
        class="button-group button-group--spacing-1x footer__button-group button-group__apply-only"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
          type="button"
        >
          Apply
        </button>
      </div>
    </div>
  </article>
</div>
`;

exports[`<Filters /> WithOnClear story renders snapshot 1`] = `
<div
  data-headlessui-state="open"
>
  <button
    aria-controls="headlessui-popover-panel-:ra:"
    aria-expanded="true"
    class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary filters-button"
    data-headlessui-state="open"
    id="headlessui-popover-button-:r8:"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="icon"
      fill="currentColor"
      height="1.5rem"
      style="--icon-size: 1.5rem;"
      viewBox="0 0 24 24"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 18V16H14V18H10ZM3 8V6H21V8H3ZM6 13V11H18V13H6Z"
      />
    </svg>
    Filters
  </button>
  <article
    class="popover-content"
    data-headlessui-state="open"
    data-popper-escaped="true"
    data-popper-placement="bottom-start"
    data-popper-reference-hidden="true"
    id="headlessui-popover-panel-:ra:"
    style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px);"
    tabindex="-1"
  >
    <div
      class="popover-container filters-popover"
    >
      <div>
        <fieldset
          class="fieldset filters-fieldset"
        >
          <legend
            class="fieldset-legend filters-fieldset__legend"
          >
            Filters Segment 1
             
          </legend>
          <div
            class="fieldset-items filters-fieldset__checkboxes"
          >
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":rd:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":rd:"
              >
                Filters label 1
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":re:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":re:"
              >
                Filters label 2
              </label>
            </div>
            <div
              class="checkbox"
            >
              <input
                class="checkbox__input"
                id=":rf:"
                type="checkbox"
              />
              <label
                class="label label--lg"
                for=":rf:"
              >
                Filters label 3
              </label>
            </div>
          </div>
        </fieldset>
      </div>
      <div
        class="button-group button-group--spacing-1x footer__button-group"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand button button--secondary"
          type="button"
        >
          Clear All
        </button>
      </div>
    </div>
  </article>
</div>
`;
